Исправил начальную разметку

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav">
@@ -34,8 +34,12 @@
         <h2 class="visually-hidden">Список основных товаров</h2>
         <ul class="catalog__list">
           <li class="catalog__item">
+            <a class="catalog__link-image" href="catalog-item1.html">
             <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy pro 500 chiken">
-            <h3 class="catalog__product-name">Cat energy pro 500 г</h3>
+            </a>
+            <h3 class="catalog__product-name">
+              <a class="catalog__link-title" href="catalog-item1.html">Cat energy pro 500 г</a>
+            </h3>
             <table class="catalog__description description__list">
               <tr>
                 <td class="description__option">Объем</td>
@@ -50,11 +54,15 @@
                 <td class="description__value">700 Р.</td>
               </tr>
             </table>
-            <a class="catalog__order button" href="#">Заказать</a>
+            <a class="catalog__order button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy pro 1000 chiken">
-            <h3 class="catalog__product-name">Cat energy pro 1000 г</h3>
+            <a class="catalog__link-image" href="catalog-item2.html">
+              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy pro 1000 chiken">
+            </a>
+            <h3 class="catalog__product-name">
+              <a class="catalog__link-title" href="catalog-item2.html">Cat energy pro 1000 г</a>
+            </h3>
             <table class="catalog__description description__list">
               <tr>
                 <td class="description__option">Объем</td>
@@ -72,8 +80,12 @@
             <a class="catalog__order button" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy pro 500 fish">
-            <h3 class="catalog__product-name">Cat energy pro 500 г</h3>
+            <a class="catalog__link-image" href="catalog-item3.html">
+              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy pro 500 fish">
+            </a>
+            <h3 class="catalog__product-name">
+              <a class="catalog__link-title" href="catalog-item3.html">Cat energy pro 500 г</a>
+            </h3>
             <table class="catalog__description description__list">
               <tr>
                 <td class="description__option">Объем</td>
@@ -88,11 +100,15 @@
                 <td class="description__value">700 Р.</td>
               </tr>
             </table>
-            <a class="catalog__order button" href="#">Заказать</a>
+            <a class="catalog__order button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy pro 1000 fish">
-            <h3 class="catalog__product-name">Cat energy pro 1000 г</h3>
+            <a class="catalog__link-image" href="catalog-item4.html">
+              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy pro 1000 fish">
+            </a>
+            <h3 class="catalog__product-name">
+              <a class="catalog__link-title" href="catalog-item4.html">Cat energy pro 1000 г</a>
+            </h3>
             <table class="catalog__description description__list">
               <tr>
                 <td class="description__option">Объем</td>
@@ -107,11 +123,15 @@
                 <td class="description__value">1000 Р.</td>
               </tr>
             </table>
-            <a class="catalog__order button" href="#">Заказать</a>
+            <a class="catalog__order button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy slim 500 buckwheat">
-            <h3 class="catalog__product-name">Cat energy slim 500 г</h3>
+            <a class="catalog__link-image" href="catalog-item5.html">
+              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy slim 500 buckwheat">
+            </a>
+            <h3 class="catalog__product-name">
+              <a class="catalog__link-title" href="catalog-item5.html">Cat energy slim 500 г</a>
+            </h3>
             <table class="catalog__description description__list">
               <tr>
                 <td class="description__option">Объем</td>
@@ -126,11 +146,15 @@
                 <td class="description__value">400 Р.</td>
               </tr>
             </table>
-            <a class="catalog__order button" href="#">Заказать</a>
+            <a class="catalog__order button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy slim 1000 buckwheat">
-            <h3 class="catalog__product-name">Cat energy slim 1000 г</h3>
+            <a class="catalog__link-image" href="catalog-item6.html">
+              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy slim 1000 buckwheat">
+            </a>
+            <h3 class="catalog__product-name">
+              <a class="catalog__link-title" href="catalog-item6.html">Cat energy slim 1000 г</a>
+            </h3>
             <table class="catalog__description description__list">
               <tr>
                 <td class="description__option">Объем</td>
@@ -145,11 +169,15 @@
                 <td class="description__value">700 Р.</td>
               </tr>
             </table>
-            <a class="catalog__order button" href="#">Заказать</a>
+            <a class="catalog__order button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy slim 500 rice">
-            <h3 class="catalog__product-name">Cat energy slim 500 г</h3>
+            <a class="catalog__link-image" href="catalog-item7.html">
+              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy slim 500 rice">
+            </a>
+            <h3 class="catalog__product-name">
+              <a class="catalog__link-title" href="catalog-item7.html">Cat energy slim 500 г</a>
+            </h3>
             <table class="catalog__description description__list">
               <tr>
                 <td class="description__option">Объем</td>
@@ -164,12 +192,12 @@
                 <td class="description__value">500 Р.</td>
               </tr>
             </table>
-            <a class="catalog__order button" href="#">Заказать</a>
+            <a class="catalog__order button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item remain">
-            <h3 class="remain__title">Показать еще 100500 товаров</h3>
+            <p class="remain__show">Показать еще 100500 товаров</p>
             <p class="remain__description">На самомделе вкусов гораздо больше!<p>
-            <a class="remain__button button" href="#">Показать все</a>
+            <a class="remain__button button" href="catalog-newproduct.html">Показать все</a>
           </li>
         </ul>
       </section>
@@ -195,9 +223,11 @@
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/">
-            <span class="copyright__link-text">HTML Academy</span>
-            <img class="copyright__link-image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип HTML Academy">
+          <a class="copyright__link-text" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="copyright__text">HTML Academy</span>
+          </a>
+          <a class="copyright__link-image" href="https://htmlacademy.ru/intensive/adaptive">
+            <img class="copyright__image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип HTML Academy">
           </a>
         </div>
       </div>
