--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav">
@@ -51,9 +51,11 @@
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/">
-            <span class="copyright__link-text">HTML Academy</span>
-            <img class="copyright__link-image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип HTML Academy">
+          <a class="copyright__link-text" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="copyright__text">HTML Academy</span>
+          </a>
+          <a class="copyright__link-image" href="https://htmlacademy.ru/intensive/adaptive">
+            <img class="copyright__image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип HTML Academy">
           </a>
         </div>
       </div>
