--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
         <h1 class="intro__title">Функциональное питание для котов</h1>
         <p class="intro__slogan"> Занялся собой? Займись котом! </p>
         <img class="intro__image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип Cat Energy">
-        <a class="intro__choice-program button" href="#">Подобрать программу</a>
+        <a class="intro__choice-program button" href="form.html">Подобрать программу</a>
       </div>
       <section class="categories">
         <div class="categories__wrapper">
@@ -93,9 +93,11 @@
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/">
-            <span class="copyright__link-text">HTML Academy</span>
-            <img class="copyright__link-image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип HTML Academy">
+          <a class="copyright__link-text" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="copyright__text">HTML Academy</span>
+          </a>
+          <a class="copyright__link-image" href="https://htmlacademy.ru/intensive/adaptive">
+            <img class="copyright__image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип HTML Academy">
           </a>
         </div>
       </div>
