Начал верстку с препроцессором

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип Cat Energy">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -35,7 +36,7 @@
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item1.html">
-            <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy pro 500 chiken">
+            <img class="catalog__product-image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat energy pro 500 chiken">
             </a>
             <h3 class="catalog__product-name">
               <a class="catalog__link-title" href="catalog-item1.html">Cat energy pro 500 г</a>
@@ -58,7 +59,7 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item2.html">
-              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy pro 1000 chiken">
+              <img class="catalog__product-image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat energy pro 1000 chiken">
             </a>
             <h3 class="catalog__product-name">
               <a class="catalog__link-title" href="catalog-item2.html">Cat energy pro 1000 г</a>
@@ -81,7 +82,7 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item3.html">
-              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy pro 500 fish">
+              <img class="catalog__product-image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat energy pro 500 fish">
             </a>
             <h3 class="catalog__product-name">
               <a class="catalog__link-title" href="catalog-item3.html">Cat energy pro 500 г</a>
@@ -104,7 +105,7 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item4.html">
-              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy pro 1000 fish">
+              <img class="catalog__product-image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat energy pro 1000 fish">
             </a>
             <h3 class="catalog__product-name">
               <a class="catalog__link-title" href="catalog-item4.html">Cat energy pro 1000 г</a>
@@ -127,7 +128,7 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item5.html">
-              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy slim 500 buckwheat">
+              <img class="catalog__product-image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat energy slim 500 buckwheat">
             </a>
             <h3 class="catalog__product-name">
               <a class="catalog__link-title" href="catalog-item5.html">Cat energy slim 500 г</a>
@@ -150,7 +151,7 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item6.html">
-              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy slim 1000 buckwheat">
+              <img class="catalog__product-image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat energy slim 1000 buckwheat">
             </a>
             <h3 class="catalog__product-name">
               <a class="catalog__link-title" href="catalog-item6.html">Cat energy slim 1000 г</a>
@@ -173,7 +174,7 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item7.html">
-              <img class="catalog__product-image" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy slim 500 rice">
+              <img class="catalog__product-image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat energy slim 500 rice">
             </a>
             <h3 class="catalog__product-name">
               <a class="catalog__link-title" href="catalog-item7.html">Cat energy slim 500 г</a>
@@ -207,7 +208,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <a class="page-footer__logo">
-          <img class="page-footer__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип Cat Energy">
+          <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy ">
         </a>
         <div class="page-footer__social social">
           <ul class="social__list">
@@ -227,7 +228,7 @@
             <span class="copyright__text">HTML Academy</span>
           </a>
           <a class="copyright__link-image" href="https://htmlacademy.ru/intensive/adaptive">
-            <img class="copyright__image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип HTML Academy">
+            <img class="copyright__image" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
           </a>
         </div>
       </div>
