--- a/source/index.html
+++ b/source/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
     <header class="page-header">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип Cat Energy">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -32,7 +33,7 @@
       <div class="page-main_preview intro">
         <h1 class="intro__title">Функциональное питание для котов</h1>
         <p class="intro__slogan"> Занялся собой? Займись котом! </p>
-        <img class="intro__image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип Cat Energy">
+        <img class="intro__image" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Пример Питания">
         <a class="intro__choice-program button" href="form.html">Подобрать программу</a>
       </div>
       <section class="categories">
@@ -77,7 +78,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <a class="page-footer__logo">
-          <img class="page-footer__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип Cat Energy">
+          <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy ">
         </a>
         <div class="page-footer__social social">
           <ul class="social__list">
@@ -97,7 +98,7 @@
             <span class="copyright__text">HTML Academy</span>
           </a>
           <a class="copyright__link-image" href="https://htmlacademy.ru/intensive/adaptive">
-            <img class="copyright__image" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип HTML Academy">
+            <img class="copyright__image" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
           </a>
         </div>
       </div>
