--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,8 +29,8 @@
       </nav>
     </header>
 
-    <main class="page-main">
-      <h1 class="catalog__title">Каталог продукции</h1>
+    <main class="page-catalog">
+      <h1 class="page-catalog__title">Каталог продукции</h1>
       <section class="catalog">
         <h2 class="visually-hidden">Список основных товаров</h2>
         <ul class="catalog__list">
