--- a/source/catalog.html
+++ b/source/catalog.html
@@ -65,7 +65,11 @@
           <li class="catalog__item">
 
             <a class="catalog__link-image" href="catalog-item1.html">
-            <img class="catalog__product-image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat energy pro 500 chiken">
+            <picture>
+              <source media="(min-width:1300px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+              <source media="(min-width:768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+              <img class="catalog__product-image" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat energy pro 500 chiken">
+            </picture>
             </a>
             <div class="catalog-wrapper">
               <h3 class="catalog__product-name">
@@ -90,7 +94,11 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item2.html">
-              <img class="catalog__product-image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat energy pro 1000 chiken">
+              <picture>
+                <source media="(min-width:1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+                <source media="(min-width:768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                <img class="catalog__product-image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat energy pro 1000 chiken">
+              </picture>
             </a>
             <div class="catalog-wrapper">
               <h3 class="catalog__product-name">
@@ -115,7 +123,11 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item3.html">
-              <img class="catalog__product-image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat energy pro 500 fish">
+              <picture>
+                <source media="(min-width:1300px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+                <source media="(min-width:768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+                <img class="catalog__product-image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat energy pro 500 fish">
+              <picture>
             </a>
             <div class="catalog-wrapper">
               <h3 class="catalog__product-name">
@@ -140,7 +152,11 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item4.html">
-              <img class="catalog__product-image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat energy pro 1000 fish">
+              <picture>
+                <source media="(min-width:1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+                <source media="(min-width:768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                <img class="catalog__product-image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat energy pro 1000 fish">
+              </picture>
             </a>
             <div class="catalog-wrapper">
               <h3 class="catalog__product-name">
@@ -165,7 +181,11 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item5.html">
-              <img class="catalog__product-image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat energy slim 500 buckwheat">
+              <picture>
+                <source media="(min-width:1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                <source media="(min-width:768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                <img class="catalog__product-image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat energy slim 500 buckwheat">
+              <picture>
             </a>
             <div class="catalog-wrapper">
               <h3 class="catalog__product-name">
@@ -190,7 +210,11 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item6.html">
-              <img class="catalog__product-image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat energy slim 1000 buckwheat">
+              <picture>
+                <source media="(min-width:1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+                <source media="(min-width:768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                <img class="catalog__product-image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat energy slim 1000 buckwheat">
+              </picture>
             </a>
             <div class="catalog-wrapper">
             <h3 class="catalog__product-name">
@@ -215,7 +239,11 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item7.html">
-              <img class="catalog__product-image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat energy slim 500 rice">
+              <picture>
+                <source media="(min-width:1300px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+                <source media="(min-width:768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                <img class="catalog__product-image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat energy slim 500 rice">
+              </picture>
             </a>
             <div class="catalog-wrapper">
               <h3 class="catalog__product-name">
