--- a/source/index.html
+++ b/source/index.html
@@ -341,9 +341,9 @@
           <p class="intro__slogan"> Занялся собой? Займись котом! </p>
         </div>
         <picture>
-          <source media="(min-width:1300px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
-          <source media="(min-width:768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
-          <img class="intro__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png" width="280" height="270" alt="Пример Питания">
+          <source media="(min-width:1300px)" srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.webp 2x, img/index-can-desktop@2x.png 2x">
+          <source media="(min-width:768px)" srcset="img/index-can-tablet@1x.webp 1x, img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.webp 2x, img/index-can-tablet@2x.jpg 2x">
+          <img class="intro__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@1x.webp 1x, img/index-can-mobile@2x.png 2x, img/index-can-mobile@2x.png 2x" width="280" height="270" alt="Пример Питания">
         </picture>
         <a class="intro__choice-program button" href="form.html">Подобрать программу</a>
       </div>
