--- a/source/form.html
+++ b/source/form.html
@@ -41,26 +41,26 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo" href="#">
+        <a class="page-footer__logo" href="index.html">
           <svg class="page-footer__logo-image" width="128px" height="24"><use xlink:href="#logo-footer"></use></svg>
         </a>
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link" href="https://vk.com/htmlacademy">
-                <svg class="social__link--vkontakte" width="22px" height="12px"><use xlink:href="#link-vkontakte"></use></svg>
+                <svg class="social__link--vkontakte" width="22px" height="12px"><use xlink:href="#icon-vk-mobile"></use></svg>
                 <span class="visually-hidden">Мы в Вконтакте</span>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link" href="https://www.instagram.com/htmlacademy">
-                <svg class="social__link--instagram" width="16px" height="16px"><use xlink:href="#link-instagram"></use></svg>
+                <svg class="social__link--instagram" width="16px" height="16px"><use xlink:href="#icon-insta-mobile"></use></svg>
                 <span class="visually-hidden">Мы в Инстаграме</span>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link " href="https://www.facebook.com/htmlacademy">
-                <svg class="social__link--facebook" width="10px" height="19px"><use xlink:href="#link-facebook"></use></svg>
+                <svg class="social__link--facebook" width="10px" height="19px"><use xlink:href="#icon-fb-mobile"></use></svg>
                 <span class="visually-hidden">Мы в Фейсбуке </span>
               </a>
             </li>
@@ -71,7 +71,7 @@
             <span class="copyright__text">HTML Academy</span>
           </a>
           <a class="copyright__link-image" href="https://htmlacademy.ru/intensive/adaptive">
-            <svg class="copright__image" width="27px" height="34px"><use xlink:href="#copright__image"></use></svg>
+            <svg class="copright__image" width="27px" height="34px"><use xlink:href="#icon-htmlacademy"></use></svg>
             <span class="visually-hidden">Логотип HTML Academy</span>
           </a>
         </div>
@@ -93,5 +93,5 @@
       }
     });
     </script>
-    </body>
-    </html>
+  </body>
+</html>
