--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
     </div>
 
     <header class="page-header">
-      <a class="page-header__logo" href="index.html" >
+      <a class="page-header__logo" href="index.html">
         <svg class="page-header__logo-image page-header__logo-desktop" width="202px" height="59px"><use xlink:href="#logo-desktop"></use></svg>
         <svg class="page-header__logo-image page-header__logo-tablet" width="173px" height="58px"><use xlink:href="#logo-tablet"></use></svg>
         <svg class="page-header__logo-image page-header__logo-mobile" width="191px" height="38px"><use xlink:href="#logo-mobile"></use></svg>
@@ -279,7 +279,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo" href="#">
+        <a class="page-footer__logo" href="index.html">
           <svg class="page-footer__logo-image" width="128px" height="24"><use xlink:href="#logo-footer"></use></svg>
         </a>
         <div class="page-footer__social social">
@@ -309,7 +309,7 @@
             <span class="copyright__text">HTML Academy</span>
           </a>
           <a class="copyright__link-image" href="https://htmlacademy.ru/intensive/adaptive">
-            <svg class="copright__image" width="27px" height="34px"><use xlink:href="#icon-htmlacademy"></use></svg>
+            <svg class="copright__image" width="41px" height="41px"><use xlink:href="#icon-htmlacademy"></use></svg>
             <span class="visually-hidden">Логотип HTML Academy</span>
           </a>
         </div>
