--- a/source/index.html
+++ b/source/index.html
@@ -19,17 +19,17 @@
         <svg class="page-header__logo-image page-header__logo-tablet" width="173px" height="58px"><use xlink:href="#logo-tablet"></use></svg>
         <svg class="page-header__logo-image page-header__logo-mobile" width="191px" height="38px"><use xlink:href="#logo-mobile"></use></svg>
       </a>
-      <nav class="main-nav main-nav--closed main-nav--nojs main-nav_index">
+      <nav class="main-nav main-nav--opened main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active site-list__item_index">
+            <li class="site-list__item site-list__item--active site-list__item--index">
               <a>Главная</a>
             </li>
-            <li class="site-list__item site-list__item_index">
+            <li class="site-list__item site-list__item--index">
               <a href="catalog.html">Каталог продукции</a>
             </li>
-            <li class="site-list__item site-list__item_index">
+            <li class="site-list__item site-list__item--index">
               <a href="form.html">Подбор программы</a>
             </li>
           </ul>
@@ -38,12 +38,12 @@
     </header>
 
     <main class="page-main">
-      <div class="page-main_preview intro">
+      <div class="page-main__preview intro">
         <div class="intro-wrapper">
           <h1 class="intro__title">Функциональное питание для котов</h1>
           <p class="intro__slogan"> Занялся собой? Займись котом! </p>
         </div>
-        <picture>
+        <picture class="intro__image-wrapper">
           <source type="image/webp" media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x">
           <source type="image/webp" media="(min-width: 768px)" srcset="img/index-can-tablet@1x.webp 1x, img/index-can-tablet@2x.webp 2x">
           <source type="image/webp" srcset="img/index-can-mobile@1x.webp 1x, img/index-can-mobile@2x.webp 2x">
@@ -89,7 +89,55 @@
           </ul>
         </div>
       </section>
-<!--Красные блоки-->
+      <section class="example">
+        <h2 class="example__title">Живой пример</h2>
+        <div class="example__wrapper-text">
+          <p class="example__story">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <div class="example__result example__result--weight">
+            <span class="example__result-value">5 кг</span>
+            <p class="example__result-description">снижение веса</p>
+          </div>
+          <div class="example__result example__result--days">
+            <span class="example__result-value">60 дней</span>
+            <p class="example__result-description">затрачено времени</p>
+          </div>
+          <div class="example__expenses">
+            <p class="example__expenses-title">Затраты на питание:</p>
+            <span class="example__expenses-value">15 000 руб.</span>
+          </div>
+        </div>
+        <div class="example__wrapper-img">
+          <picture>
+            <source type="image/webp" media="(min-width: 1300px)" srcset="img/before-desktop@1x.webp 1x, img/before-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/before-tablet@1x.webp 1x, img/before-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/before-mobile@1x.webp 1x, img/before-mobile@2x.webp 2x">
+            <source media="(min-width:1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+            <source media="(min-width:768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
+            <img class="example__image" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" width="320" height="232" alt="Пример Питания">
+          </picture>
+          <div class="example__choice">
+            <button class="example__choice-button example__choice-button--before">Было</button>
+            <div class="example__range">
+              <div class="example__toggle">
+              </div>
+            </div>
+            <button class="example__choice-button example__choice-button--after">Стало</button>
+          </div>
+        </div>
+      </section>
+      <section class="cooperation cooperation--white">
+        <div class="cooperation__wrapper">
+        <p class="cooperation__slogan">Приглашаем <br> к сотрудничеству дилеров!</p>
+        <div class="cooperation__address-wrapper">
+          <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8</p>
+          <span class="cooperation__address cooperation__address--city">Санкт-Петербург</span>
+        </div>
+      </div>
+        <div class="cooperation__map-wrapper">
+          <h2 class="visually-hidden">Карта</h2>
+          <iframe class="cooperation__map" src="https://yandex.ru/map-widget/v1/-/CCfJqHi4"  style="border:0"></iframe>
+        </div>
+      </section>
     </main>
 
     <footer class="page-footer">
@@ -101,19 +149,19 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link" href="https://vk.com/htmlacademy">
-                <svg class="social__link--vkontakte" width="22px" height="12px"><use xlink:href="#icon-vk-mobile"></use></svg>
+                <svg class="social__icon social__icon--vkontakte" width="22px" height="12px"><use xlink:href="#icon-vk-mobile"></use></svg>
                 <span class="visually-hidden">Мы в Вконтакте</span>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link" href="https://www.instagram.com/htmlacademy">
-                <svg class="social__link--instagram" width="16px" height="16px"><use xlink:href="#icon-insta-mobile"></use></svg>
+                <svg class="social__icon social__icon--instagram" width="16px" height="16px"><use xlink:href="#icon-insta-mobile"></use></svg>
                 <span class="visually-hidden">Мы в Инстаграме</span>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link " href="https://www.facebook.com/htmlacademy">
-                <svg class="social__link--facebook" width="10px" height="19px"><use xlink:href="#icon-fb-mobile"></use></svg>
+              <a class="social__link" href="https://www.facebook.com/htmlacademy">
+                <svg class="social__icon social__icon--facebook" width="10px" height="19px"><use xlink:href="#icon-fb-mobile"></use></svg>
                 <span class="visually-hidden">Мы в Фейсбуке </span>
               </a>
             </li>
@@ -130,21 +178,7 @@
         </div>
       </div>
     </footer>
-    <script>
-    var navMain = document.querySelector('.main-nav');
-    var navToggle = document.querySelector('.main-nav__toggle');
-
-    navMain.classList.remove('main-nav--nojs');
-
-    navToggle.addEventListener('click', function() {
-      if (navMain.classList.contains('main-nav--closed')) {
-        navMain.classList.remove('main-nav--closed');
-        navMain.classList.add('main-nav--opened');
-      } else {
-        navMain.classList.add('main-nav--closed');
-        navMain.classList.remove('main-nav--opened');
-      }
-    });
-    </script>
+    <script src="js/main-nav.js"></script>
+    <script src="js/picturefill.js"></script>
   </body>
 </html>
