--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,12 +14,12 @@
     </div>
 
     <header class="page-header">
-      <a class="page-header__logo" href="index.html" >
+      <a class="page-header__logo" href="index.html">
         <svg class="page-header__logo-image page-header__logo-desktop" width="202px" height="59px"><use xlink:href="#logo-desktop"></use></svg>
         <svg class="page-header__logo-image page-header__logo-tablet" width="173px" height="58px"><use xlink:href="#logo-tablet"></use></svg>
         <svg class="page-header__logo-image page-header__logo-mobile" width="191px" height="38px"><use xlink:href="#logo-mobile"></use></svg>
       </a>
-      <nav class="main-nav main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--opened main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
@@ -37,7 +37,6 @@
       </nav>
     </header>
 
-
     <main class="page-catalog">
       <h1 class="page-catalog__title">Каталог продукции</h1>
       <section class="catalog">
@@ -54,11 +53,11 @@
                 <img class="catalog__product-image" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat energy pro 500 chiken">
               </picture>
             </a>
-            <div class="catalog-wrapper">
+            <div class="catalog__wrapper">
               <h3 class="catalog__product-name">
                 <a class="catalog__link-title" href="catalog-item1.html">Cat energy pro 500 г</a>
               </h3>
-              <table class="catalog__description description__list">
+              <table class="catalog__description description">
                 <tr>
                   <td class="description__option">Объем</td>
                   <td class="description__value">500 г</td>
@@ -86,11 +85,11 @@
                 <img class="catalog__product-image" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat energy pro 1000 chiken">
               </picture>
             </a>
-            <div class="catalog-wrapper">
+            <div class="catalog__wrapper">
               <h3 class="catalog__product-name">
                 <a class="catalog__link-title" href="catalog-item2.html">Cat energy pro 1000 г</a>
               </h3>
-              <table class="catalog__description description__list">
+              <table class="catalog__description description">
                 <tr>
                   <td class="description__option">Объем</td>
                   <td class="description__value">1000 г</td>
@@ -118,11 +117,11 @@
                 <img class="catalog__product-image" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat energy pro 500 fish">
               </picture>
             </a>
-            <div class="catalog-wrapper">
+            <div class="catalog__wrapper">
               <h3 class="catalog__product-name">
                 <a class="catalog__link-title" href="catalog-item3.html">Cat energy pro 500 г</a>
               </h3>
-              <table class="catalog__description description__list">
+              <table class="catalog__description description">
                 <tr>
                   <td class="description__option">Объем</td>
                   <td class="description__value">500 г</td>
@@ -150,11 +149,11 @@
                 <img class="catalog__product-image" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat energy pro 1000 fish">
               </picture>
             </a>
-            <div class="catalog-wrapper">
+            <div class="catalog__wrapper">
               <h3 class="catalog__product-name">
                 <a class="catalog__link-title" href="catalog-item4.html">Cat energy pro 1000 г</a>
               </h3>
-              <table class="catalog__description description__list">
+              <table class="catalog__description description">
                 <tr>
                   <td class="description__option">Объем</td>
                   <td class="description__value">1000 г</td>
@@ -174,19 +173,19 @@
           <li class="catalog__item">
             <a class="catalog__link-image" href="catalog-item5.html">
               <picture>
-              <source type="image/webp" media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
-              <source media="(min-width:1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
-              <source media="(min-width:768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-              <img class="catalog__product-image" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat energy slim 500 buckwheat">
-            </picture>
-          </a>
-            <div class="catalog-wrapper">
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
+                <source media="(min-width:1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                <source media="(min-width:768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                <img class="catalog__product-image" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat energy slim 500 buckwheat">
+              </picture>
+            </a>
+            <div class="catalog__wrapper">
               <h3 class="catalog__product-name">
                 <a class="catalog__link-title" href="catalog-item5.html">Cat energy slim 500 г</a>
               </h3>
-              <table class="catalog__description description__list">
+              <table class="catalog__description description">
                 <tr>
                   <td class="description__option">Объем</td>
                   <td class="description__value">500 г</td>
@@ -214,11 +213,11 @@
                 <img class="catalog__product-image" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat energy slim 1000 buckwheat">
               </picture>
             </a>
-            <div class="catalog-wrapper">
-            <h3 class="catalog__product-name">
+            <div class="catalog__wrapper">
+              <h3 class="catalog__product-name">
                 <a class="catalog__link-title" href="catalog-item6.html">Cat energy slim 1000 г</a>
               </h3>
-              <table class="catalog__description description__list">
+              <table class="catalog__description description">
                 <tr>
                   <td class="description__option">Объем</td>
                   <td class="description__value">1000 г</td>
@@ -246,11 +245,11 @@
                 <img class="catalog__product-image" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat energy slim 500 rice">
               </picture>
             </a>
-            <div class="catalog-wrapper">
+            <div class="catalog__wrapper">
               <h3 class="catalog__product-name">
                 <a class="catalog__link-title" href="catalog-item7.html">Cat energy slim 500 г</a>
               </h3>
-              <table class="catalog__description description__list">
+              <table class="catalog__description description">
                 <tr>
                   <td class="description__option">Объем</td>
                   <td class="description__value">500 г</td>
@@ -274,31 +273,95 @@
           </p></li>
         </ul>
       </section>
-<!--Красные блоки-->
+      <section class="catalog-other">
+        <h2 class="catalog-other__title">Дополнительные товары</h2>
+        <ul class="catalog-other__list">
+          <li class="catalog-other__item">
+            <h3 class="catalog-other__product-name">
+              <a class="catalog-other__link-title" href="catalog-other-item1.html">Сахарозаменитель</a>
+            </h3>
+            <div class="catalog-other__description description-other">
+              <span class="description-other__option">1 упаковка (100 г)</span>
+              <span class="description-other__value">200 Р.</span>
+            </div>
+            <a class="catalog-other__order button" href="order.html">Заказать</a>
+          </li>
+          <li class="catalog-other__item">
+            <h3 class="catalog-other__product-name">
+              <a class="catalog-other__link-title" href="catalog-other-item1.html">Питьевая вода</a>
+            </h3>
+            <div class="catalog-other__description description-other">
+              <span class="description-other__option">5 литров</span>
+              <span class="description-other__value">50 Р.</span>
+            </div>
+            <a class="catalog-other__order button" href="order.html">Заказать</a>
+          </li>
+          <li class="catalog-other__item">
+            <h3 class="catalog-other__product-name">
+              <a class="catalog-other__link-title" href="catalog-other-item1.html">Молоко</a>
+            </h3>
+            <div class="catalog-other__description description-other">
+              <span class="description-other__option">1 литр</span>
+              <span class="description-other__value">100 Р.</span>
+            </div>
+            <a class="catalog-other__order button" href="order.html">Заказать</a>
+          </li>
+          <li class="catalog-other__item">
+            <h3 class="catalog-other__product-name">
+              <a class="catalog-other__link-title" href="catalog-other-item1.html">Витамины</a>
+            </h3>
+            <div class="catalog-other__description description-other">
+              <span class="description-other__option">1 упаковка (30 г)</span>
+              <span class="description-other__value">300 Р.</span>
+            </div>
+            <a class="catalog-other__order button" href="order.html">Заказать</a>
+          </li>
+        </ul>
+        <div class="gift">
+          <svg class="gift__icon" width="55" height="60">
+            <use xlink:href="#icon-gift"></use>
+          </svg>
+          <p class="gift__promo">Закажите все<br> и получите чехол для кота в подарок!</p>
+        </div>
+      </section>
+
+      <section class="cooperation">
+        <div class="cooperation__wrapper">
+        <p class="cooperation__slogan">Приглашаем <br> к сотрудничеству дилеров!</p>
+        <div class="cooperation__address-wrapper">
+          <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8</p>
+          <span class="cooperation__address cooperation__address--city">Санкт-Петербург</span>
+        </div>
+      </div>
+        <div class="cooperation__map-wrapper">
+          <h2 class="visually-hidden">Карта</h2>
+          <iframe class="cooperation__map" src="https://yandex.ru/map-widget/v1/-/CCfJqHi4" style="border:0"></iframe>
+        </div>
+      </section>
     </main>
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo" href="#">
+        <a class="page-footer__logo" href="index.html">
           <svg class="page-footer__logo-image" width="128px" height="24"><use xlink:href="#logo-footer"></use></svg>
         </a>
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link" href="https://vk.com/htmlacademy">
-                <svg class="social__link--vkontakte" width="22px" height="12px"><use xlink:href="#icon-vk-mobile"></use></svg>
+                <svg class="social__icon social__icon--vkontakte" width="22px" height="12px"><use xlink:href="#icon-vk-mobile"></use></svg>
                 <span class="visually-hidden">Мы в Вконтакте</span>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link" href="https://www.instagram.com/htmlacademy">
-                <svg class="social__link--instagram" width="16px" height="16px"><use xlink:href="#icon-insta-mobile"></use></svg>
+                <svg class="social__icon social__icon--instagram" width="16px" height="16px"><use xlink:href="#icon-insta-mobile"></use></svg>
                 <span class="visually-hidden">Мы в Инстаграме</span>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link " href="https://www.facebook.com/htmlacademy">
-                <svg class="social__link--facebook" width="10px" height="19px"><use xlink:href="#icon-fb-mobile"></use></svg>
+              <a class="social__link" href="https://www.facebook.com/htmlacademy">
+                <svg class="social__icon social__icon--facebook" width="10px" height="19px"><use xlink:href="#icon-fb-mobile"></use></svg>
                 <span class="visually-hidden">Мы в Фейсбуке </span>
               </a>
             </li>
@@ -315,21 +378,7 @@
         </div>
       </div>
     </footer>
-    <script>
-    var navMain = document.querySelector('.main-nav');
-    var navToggle = document.querySelector('.main-nav__toggle');
-
-    navMain.classList.remove('main-nav--nojs');
-
-    navToggle.addEventListener('click', function() {
-      if (navMain.classList.contains('main-nav--closed')) {
-        navMain.classList.remove('main-nav--closed');
-        navMain.classList.add('main-nav--opened');
-      } else {
-        navMain.classList.add('main-nav--closed');
-        navMain.classList.remove('main-nav--opened');
-      }
-    });
-    </script>
+    <script src="js/main-nav.js"></script>
+    <script src="js/picturefill.js"></script>
   </body>
 </html>
