--- a/source/form.html
+++ b/source/form.html
@@ -40,7 +40,7 @@
     <main class="page-form">
       <h1 class="page-form__title">Подбор программы</h1>
       <p class="page-form__desc">Заполните анкету и мы подберем программу питания для вашего кота</p>
-      <form class="form" method="get" action="https://echo.htmlacademy.ru">
+      <form class="form" method="post" enctype="multipart/form-data" action="https://echo.htmlacademy.ru">
         <div class="form__wrapper-cat">
           <fieldset class="form__fieldset form__fieldset--cat">
             <legend class="form__title visually-hidden">Анкета кота</legend>
