--- a/source/form.html
+++ b/source/form.html
@@ -46,15 +46,15 @@
             <legend class="form__title visually-hidden">Анкета кота</legend>
             <label class="form__label" for="name-cat">
               <span class="form__field form__field--name">Имя:*</span>
-              <input class="form__input" type="text" name="name" id="name-cat" value="" placeholder="Барсик" required></input>
+              <input class="form__input" type="text" name="name" id="name-cat" value="" placeholder="Барсик" required>
             </label>
             <label class="form__label" for="weight-cat">
               <span class="form__field form__field--weight">Вес (кг):*</span>
-              <input class="form__input" type="text" name="weigth" id="weight-cat" value="" placeholder="7" required></input>
+              <input class="form__input" type="text" name="weigth" id="weight-cat" value="" placeholder="7" required>
             </label>
             <label class="form__label" for="age-cat">
               <span class="form__field form__field--age">Возраст (лет):</span>
-              <input class="form__input" type="text" name="age" id="age-cat" value="" placeholder="7"></input>
+              <input class="form__input" type="text" name="age" id="age-cat" value="" placeholder="7">
             </label>
           </fieldset>
           <div class="form__wrapper-programm">
@@ -62,15 +62,15 @@
               <legend class="form__title visually-hidden">Выбор программы</legend>
               <ul class="form__program-list">
                 <li class="form__program-item">
-                  <input class="form__radio visually-hidden" type="radio" name="program" id="program-loss" value="Похудение" checked></input>
+                  <input class="form__radio visually-hidden" type="radio" name="program" id="program-loss" value="Похудение" checked>
                   <label class="form__label form__label--radio" for="program-loss"><span class="form__field">Похудение</span></label>
                 </li>
                 <li class="form__program-item">
-                  <input class="form__radio visually-hidden" type="radio" name="program" id="program-gain" value="Набор массы"></input>
+                  <input class="form__radio visually-hidden" type="radio" name="program" id="program-gain" value="Набор массы">
                   <label class="form__label form__label--radio" for="program-gain"><span class="form__field">Набор массы</span></label>
                 </li>
                 <li class="form__program-item">
-                  <input class="form__radio visually-hidden" type="radio" name="program" id="program-advice" value="Не знаю"></input>
+                  <input class="form__radio visually-hidden" type="radio" name="program" id="program-advice" value="Не знаю">
                   <label class="form__label form__label--radio" for="program-advice"><span class="form__field">Не знаю (нужен ваш совет)</span></label>
                 </li>
               </ul>
@@ -83,12 +83,12 @@
             <div class="form__wrapper-host">
               <label class="form__label form__label--contacts" for="mail-host">
                 <span class="form__field form__field--email">E-mail:*</span>
-                <input class="form__input" type="email" name="mail" id="mail-host" value="" placeholder="Kuklachev@gmail.com" required></input>
+                <input class="form__input" type="email" name="mail" id="mail-host" value="" placeholder="Kuklachev@gmail.com" required>
                 <svg class="form__icon form__icon--email" width="17" height="13"><use xlink:href="#icon-mail"></use></svg>
               </label>
               <label class="form__label form__label--contacts" for="phone-host">
                 <span class="form__field form__field--phone">Телефон:*</span>
-                <input class="form__input form__input--phone" type="tel" name="phone" id="phone-host" value="" placeholder="8 (960) 900-60-90" required></input>
+                <input class="form__input form__input--phone" type="tel" name="phone" id="phone-host" value="" placeholder="8 (960) 900-60-90" required>
                 <svg class="form__icon form__icon--phone" width="20" height="20"><use xlink:href="#icon-phone"></use></svg>
               </label>
             </div>
@@ -107,19 +107,19 @@
             <legend class="form__title">Дополнительно</legend>
             <ul class="form__additional-list">
               <li class="form__additional-item">
-                <input class="form__checkbox visually-hidden" type="checkbox" name="sweetener" id="additional-sweetener" checked></input>
+                <input class="form__checkbox visually-hidden" type="checkbox" name="sweetener" id="additional-sweetener" checked>
                 <label class="form__label form__label--checkbox" for="additional-sweetener"><span class="form__field">Сахарозаменитель</span></label>
               </li>
               <li class="form__additional-item">
-                <input class="form__checkbox visually-hidden" type="checkbox" name="water" id="additional-water"></input>
+                <input class="form__checkbox visually-hidden" type="checkbox" name="water" id="additional-water">
                 <label class="form__label form__label--checkbox" for="additional-water"><span class="form__field">Питьевая вода</span></label>
               </li>
               <li class="form__additional-item">
-                <input class="form__checkbox visually-hidden" type="checkbox" name="milk" id="additional-milk"></input>
+                <input class="form__checkbox visually-hidden" type="checkbox" name="milk" id="additional-milk">
                 <label class="form__label form__label--checkbox" for="additional-milk"><span class="form__field">Молоко</span></label>
               </li>
               <li class="form__additional-item">
-                <input class="form__checkbox visually-hidden" type="checkbox" name="vitamins" id="additional-vitamins"></input>
+                <input class="form__checkbox visually-hidden" type="checkbox" name="vitamins" id="additional-vitamins">
                 <label class="form__label form__label--checkbox" for="additional-vitamins"><span class="form__field">Витамины</span></label>
               </li>
             </ul>
